...
    var passwordVisibility by rememberSaveable { mutableStateOf(false) }

    OutlinedTextField(
        modifier = Modifier
            .width(310.dp)
            .focusRequester(focusRequester)
            .testTag("loginPassword"),
        value = textPassword,
        onValueChange = onPasswordChange,
        label = { Text("Contraseña") },
        singleLine = true,
        visualTransformation = if (passwordVisibility) VisualTransformation.None else PasswordVisualTransformation(),
        trailingIcon = {
...

    if (isError) {
        Text(
            text = "El campo contraseña no puede estar vacío",
            color = MaterialTheme.colorScheme.error,
            style = MaterialTheme.typography.labelSmall,
            modifier = Modifier.padding(top = 4.dp).testTag("errorLoginPassword")
        )
    }


}
